# TIL

./: .editorconfig  .gitmessage.txt  README.md  pyproject.toml
AI/: 250117_Prompt.md  250117_Transformer.md
API/: 250117_API.md  250117_HTTP.md
Algorithm/: 250205_APS.md  250205_Big_O.ipynb  250205_list.ipynb  250205_test.py  250206_list.ipynb  250311_과제제출_김권수.md
Algorithm/backtracking/: N-Queen.py
Algorithm/billiards/: A0005_KIMKWONSU_KIMJEONGTAEK.py  billiards_assets.py  one_cution.py  p.py  straight_shot.py  test.py  test2.py  test3.py  서울5반_김권수_김정택.txt
Algorithm/datatype/: my_heap.py  my_heap2.py  my_medianheap.py  my_segment_tree.py
Algorithm/sorted/: buble_sort.py  cell_sort.py  counting_sort.py  merge_sort.py  quick_sort.py  select_sort.py  tim_sort.py
Algorithm/stack/: fibonacciNumbers.py  recursion.py  stack.py  subset.py
DB/: 250418_db_modeling.md
Git/: 240115_git&bash-basic.md  240116_gitignore-basic.md  250115_git&bash-basic.md  250116_git_reset.md  250116_git_restore.md  250116_git_revert.md  250116_github-basic.md  250328_git_commit_template.md
Markdown/: 240115_markdown-basic.md
Other/: logging.ipynb
Python/: 250120_python-basic.md  250121_python-copy.md  250121_python-datatypes.md  250122_python-function  250123_python-control_of_flow.md  250123_python-module.md  250123_python-package&library.md  250124_python-method.md  250203_python-OPP.md  250203_python-classes.md  250204_python-classes-advanced.md  250204_python-exception.md  250204_python-총정리.md
Test/: 250411_TDD.md
Web/: 250324_WebApplication.md  triangle.ipynb
(+278 files in other folders)
